<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">AutiYoda</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">El formato del Correo ingresado es inválido</string>
    <string name="error_invalid_password">La contraseña ingresada es muy corta. Debe contener al menos 8 caracteres.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="title_activity_maps">Lugares de Interés</string>
    <string name="title_activity_settings">Opciones</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Sección Predeterminada -->
    <string name="default_section_title">Sección Predeterminada</string>
    <string name="default_section_description">Seleccione la sección que le gustaría que se mostrara cada vez que se inicia la aplicación</string>
    <string-array name="section_list_titles">
        <item>Pictogramas</item>
        <item>Vocabulario</item>
    </string-array>
    <string-array name="section_list_values">
        <item>pic</item>
        <item>voc</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_pictograms">Pictogramas</string>
    <string name="title_vocabulary">Vocabulario</string>
    <string name="letslearn">Aprendamos</string>
    <string name="action_settings">Opciones</string>
    <string name="signUp">Crear Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="gender">Género</string>
    <string name="countries">Seleccionar País</string>
    <string name="pref_title_night_mode">Modo Noche</string>
    <string name="pref_description_Night_mode">Activa o Desactiva el Modo Noche</string>
    <string name="signUpQ">Crear Cuenta</string>
    <string name="forgotPassword">¿Ha olvidado su contraseña?</string>
    <string name="sign_up_indications">Por favor, proporcione los siguientes datos para crear su cuenta.</string>
    <string name="deleteAccount">Eliminar Cuenta</string>
    <string name="prompt_password_confirmation">Confirmación de Contraseña</string>
    <string name="sign_up_form_title">Registrarse</string>
    <string name="prompt_age">Edad (en años)</string>
    <string name="prompt_name">Nombre</string>
    <string name="error">Error en la Operación</string>
    <string name="title_help">Ayuda</string>
    <string name="title_language">Idioma</string>
    <string name="send">Enviar</string>
    <string name="password_reset">Recuperación de Contraseña</string>
    <string name="login">Inicio de Sesión</string>
    <string name="password_reset_succesful">Hemos enviado a su dirección de correo electrónico las indicaciones para la recuperación de su contraseña.</string>
    <string name="password_reset_indications">Ingrese su dirección de correo electrónico asociado a su cuenta. Le enviaremos las indicaciones para recuperar su contraseña.</string>
    <string name="Welcome">Bienvenido a AutiYoda</string>
    <string name="skip">Omitir</string>
    <string name="finish">Finalizar</string>
    <string name="next">Siguiente</string>
    <string name="welcome_description">Autiyoda es una aplicación móvil cuyo objetivo es ayudar en la mejora de la habilidad verbal y la realización de actividades diarias a personas con el trastorno de espectro autista.</string>
    <string name="comunication_introduction_description">Aprende nuevas palabras y frases al tocar la imagen en pantalla y escuchar su pronunciación.</string>
    <string name="comunication_introduction_title">Aprendizaje por Síntesis de Voz</string>
    <string name="pictograms_introduction_description">Aprende a realizar actividades diarias paso a paso guiado de manera visual y auditiva.</string>
    <string name="pictograms_introduction_title">Aprendizaje por Pictogramas</string>

    <string name="title_activity_pictograms">PictogramsActivity</string>
    <string name="imageView_Introduction_Description">Introducción</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="account">Cuenta</string>
    <string name="profile">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="success">Success!</string>
    <string name="ok" translatable="false">OK</string>

    <string name="success_signuup_message">El usuario ha sido creado exitosamente.</string>


    <!-- Manejo de Errores -->
    <string name="error_no_connection">No se puede realizar la conexión con el servidor. Compruebe la conexión a internet.</string>
    <string name="error_user_not_found">No se encuentra algún usuario registrado con la dirección de correo ingresada. Por favor verifique sus datos ingresados.</string>
    <string name="error_wrong_password">La contraseña ingresada es incorrecta.</string>
    <string name="warning">Atención</string>
    <string name="delete_account_warning">¿Realmente desea eliminar su cuenta? Para completar esta operación debe proveer su contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="no">No</string>
    <string name="habilities_learning">Aprendizaje de Habilidades</string>
    <string name="vocabulary_learning">Aprendizaje de Vocabulario</string>
    <string name="error_password_mismatch">Las contraseñas ingresadas nos coinciden</string>
    <string name="error_user_collision">Ya existe un usuario asociado a la dirección de correo electrónico ingresada. Intente con otra dirección de correo electrónico.</string>

    <!-- Custom listview -->
    <string name="item_imageView">Imagen de Item</string>


    <!-- Pictogramas -->
    <string name="hand_washing">Lavarse las Manos</string>
    <string-array name="hand_washing_steps">
        <item>1. Abrir Llave</item>
        <item>2. Aplicar Jabon</item>
        <item>3. Lavar Manos</item>
        <item>4. Enjuagar Manos</item>
        <item>5. Cerrar Llave</item>
        <item>6. Secar Manos</item>
        <item>¡Bien Hecho! ¡Tus manos ya están limpias!</item>
    </string-array>

    <string name="congratularions">¡Bien Hecho!</string>
    <string name="habilities_list">Lista de Habilidades</string>


    <!-- Vocabulario -->

    <string name="vocabulary_category_alphabet">Abecedario</string>

    <string-array name="vocabulary_alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string name="vocabulary_category_animals">Animales</string>
    <string-array name="vocabulary_animals">
        <item>Caballo</item>
        <item>Gallina</item>
        <item>Jirafa</item>
        <item>León</item>
        <item>Rana</item>
    </string-array>

    <string name="vocabulary_category_fuits">Frutas</string>
    <string name="string_categories">Categorias</string>
    <string-array name="vocabulary_fruits">
        <item>Cereza</item>
        <item>Limón</item>
        <item>Pera</item>
        <item>Sandía</item>
        <item>Uvas</item>
    </string-array>

    <!-- Map Directory Spinner -->
    <string-array name="map_directory_categories">
        <item>-----</item>
        <item>Hospitales</item>
        <item>Especialistas</item>
    </string-array>


</resources>
