<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_pictogram"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/title_pictograms" />

    <item
        android:id="@+id/nav_vocabulary"
        android:icon="@drawable/ic_vocabulary_black_24dp"
        android:title="@string/title_vocabulary" />


    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_activity_maps" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/title_help" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_activity_settings" />



</menu>
