<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Opción de Modo Noche. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="nightMode_switch"
        android:summary="@string/pref_description_Night_mode"
        android:title="@string/pref_title_night_mode" />

    <!-- Opción de Seleccionar País -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/countries_list_titles"
        android:entryValues="@array/countries_list_values"
        android:key="gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/countries" />

    <!-- Opción de Seleccionar Género -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/gender_list_titles"
        android:entryValues="@array/gender_list_values"
        android:key="gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/gender" />

    <!-- Cerrar Sesión -->
    <Preference android:title="@string/logout" >
        <intent android:action="android.intent.action.VIEW"
            android:data="" />
    </Preference>



</PreferenceScreen>
