<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_theme"
        android:icon="@drawable/ic_format_color_fill_black_24dp"
        android:title="@string/pref_title_night_mode" />

    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_translate_black_24dp"
        android:title="@string/title_language" />


    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_deleteAccount"
            android:icon="@drawable/ic_delete_account_black_24dp"
            android:title="@string/deleteAccount" />

    </group>



</menu>
