<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroductionActivity$PlaceholderFragment">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:alpha="0.12"
            android:background="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:backgroundTint="@android:color/white"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/ButtonSkip"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/skip"
                android:textColor="@android:color/white" />

            <!-- This overlaps the next button in the last slide -->
            <Button
                android:id="@+id/intro_btn_finish"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/finish"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/Button_Next"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:padding="@dimen/activity_horizontal_margin" />

        </FrameLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/TextViewIntroductionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/Welcome"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="194dp"
        android:text="@string/welcome_description"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</RelativeLayout>